--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <title>LeanOnMe</title>
+    <meta name="title" property="og:title" content="LeanOnMe">
+    <meta property="og:type" content="Website">
+    <meta name="image" property="og:image" content="https://imgur.com/PRhbGKS">
+    <meta name="description" property="og:description" content="Calorie Tracker">
+    <meta name="author" content="Victor Hou">
   </head>
   <body>
     <div id="root"></div>
