--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script src="https://kit.fontawesome.com/0a11948c19.js" crossorigin="anonymous"></script>
     <meta charset="utf-8" />
     <title>LeanOnMe</title>
     <meta name="title" property="og:title" content="LeanOnMe">
