add image to url link

--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -6,7 +6,7 @@
     <title>LeanOnMe</title>
     <meta name="title" property="og:title" content="LeanOnMe">
     <meta property="og:type" content="Website">
-    <meta name="image" property="og:image" content="https://imgur.com/PRhbGKS">
+    <meta name="image" property="og:image" content="https://i.imgur.com/1hMqAla.png">
     <meta name="description" property="og:description" content="Calorie Tracker">
     <meta name="author" content="Victor Hou">
   </head>
